--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,105 @@
-body {
+/* Основные настройки страницы */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'HSE Slab';
+  src: local('HSE Slab'), url(./fonts/HSESlab-Regular.otf) format('opentype');
+}
+@font-face {
+  font-family: 'HSE Slab Black';
+  src: local('HSE Slab Italic'), url(./fonts/HSESlab-Italic.otf) format('opentype');
+}
+
+html {
+  font-size: 15px;
+  scroll-behavior: smooth;
+}
+
+body {
+  width: auto;
+  font-family: 'HSE Slab', sans-serif;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: #ededed;
+}
+
+ul,
+ol,
+nav,
+menu {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+  border: none;
+}
+
+input{
+  outline: none;
+  outline-offset: 0;
+}
+
+input:active,
+input:hover,
+input:focus{
+  outline: none;
+  outline-offset: 0;
+}
+
+button {
+  cursor: pointer;
+  background-color: transparent;
+  color: #fff;
+  padding: 0;
+}
+
+button:focus {
+  outline: none;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+/* Удаляем все анимации и переходы для людей, 
+      которые предпочитай их не использовать */
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+/* Определяю переменные для цвета, которые потом можно менять */
+:root {
+  --main: #F5F5F5;
+  --second: #FFF;
+  --contrast: #1C1C1C;
+  --accent: #4296d3;
+  --grey: #f6f6f6;
 }
