--- a/src/sections/info/style.module.scss
+++ b/src/sections/info/style.module.scss
@@ -7,10 +7,7 @@
     align-items: center;
 
     background-color: #102D69;
-    background-image: url(../../images/bg.jpg);
-    background-size: contain;
-    background-repeat: repeat;
-    background-blend-mode: multiply;
+    background-image: url(../../images/bg.png);
 }
 
 .content {
